slipway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slipway
  labels:
    prometheus: lifestyle
