slipway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slipway
  namespace: slipway
  labels:
    app: slipway
spec:
  selector:
    app: slipway
  ports:
    - name: http
      port: 8080
      targetPort: http
