slipway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slipway
  namespace: slipway
  annotations:
    tailscale.com/hostname: slipway
    tailscale.com/proxy-class: spread-across-nodes
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: slipway
      port:
        name: http
  tls:
    - hosts:
        - slipway
